# example-adder

./: .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  default.nix  dockgen.toml  flake.nix  package.xml  pyproject.toml
.github/workflows/: ci_ros2.yml  dockgen.yml  wheel.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  gepadd.cpp  test_add.py
cmake-wheel/: python.cmake
include/example-adder/: CMakeLists.txt  gepadd.hpp  python.hpp
python/: CMakeLists.txt  gepadd.cpp  main.cpp
python/example_adder/: __init__.py
src/: CMakeLists.txt  gepadd.cpp  main.cpp
tests/: CMakeLists.txt  add.cpp  boost_add.cpp
tests/python/: CMakeLists.txt
