SET(${PROJECT_NAME}_SOURCES
  gepadd
  )

ADD_LIBRARY(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCES})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)

ADD_EXECUTABLE(${PROJECT_NAMESPACE}-${PROJECT_NAME} main)
TARGET_LINK_LIBRARIES(${PROJECT_NAMESPACE}-${PROJECT_NAME} ${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAMESPACE}-${PROJECT_NAME} RUNTIME DESTINATION bin)
