SET(${PROJECT_NAME}_SOURCES
  gepadd
  )

ADD_LIBRARY(${PROJECT_NAME} SHARED ${${PROJECT_NAME}_SOURCES})

ADD_EXECUTABLE(${PROJECT_NAMESPACE}-${PROJECT_NAME} main)
TARGET_LINK_LIBRARIES(${PROJECT_NAMESPACE}-${PROJECT_NAME} ${PROJECT_NAME})

IF(NOT INSTALL_PYTHON_INTERFACE_ONLY)
  INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
  INSTALL(TARGETS ${PROJECT_NAMESPACE}-${PROJECT_NAME} RUNTIME DESTINATION bin)
ENDIF(NOT INSTALL_PYTHON_INTERFACE_ONLY)
