SET(${PY_NAME}_SOURCES
  gepadd
  )

ADD_LIBRARY(${PY_NAME} SHARED ${${PY_NAME}_SOURCES})
TARGET_LINK_LIBRARIES(${PY_NAME} ${PROJECT_NAME})
TARGET_LINK_BOOST_PYTHON(${PY_NAME})
INSTALL(TARGETS ${PY_NAME} DESTINATION ${${PY_NAME}_INSTALL_DIR})

SET(${PY_NAME}_PYTHON
  __init__.py
  )

INSTALL(FILES ${${PY_NAME}_PYTHON} DESTINATION ${${PY_NAME}_INSTALL_DIR})

ADD_PYTHON_UNIT_TEST("py-add" "bindings/python/test_add.py" "bindings/python")
